--- a/index.html
+++ b/index.html
@@ -3,10 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
   <title>CV</title>
 </head>
 <body>
-  
+  <div class="container">
+    <header>
+      <h1>CV</h1>
+      <div class="preview">
+        <img src="" alt="avatar" class="avatar">
+        <p class="fullname">Elizaveta Chernysh</p>
+      </div>
+    </header>
+    <main>
+      <section class="contacts">
+        <h3 class="title-section">CONTACTS</h3>
+        <p class="phone"></p>
+        <ul class="contacts-link">
+          <li>
+            <a href="https://t.me/Elizachernysh" class="telegram">
+              <img src="https://osx.telegram.org/updates/site/logo.png" width="60"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/ElizaChernysh" class="github">
+            <img src="https://cdn.iconscout.com/icon/free/png-256/github-163-761603.png" width="60"/>
+          </a>
+        </li>
+          <li>
+            <a href="https://www.linkedin.com/in/eliza-chernysh-28a40a239/" class="linkedin">
+              <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="60">
+            </a>
+          </li>
+          <li>
+            <a href="mailto:elizaveta.chernysh.v@gmail.com" class="gmail">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0ICqrLgplZP86QhH5yE9DwLyuip1KLe-o8z39CAchzXVLfcAtmLbf6iIEkslvdOg6xKE&usqp=CAU" width="60"/>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
