feat: add new style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <h1>CV</h1>
         <div class="preview">
-          <img src="" alt="avatar" class="avatar">
+          <img src="https://avatars.githubusercontent.com/u/82468286?v=4" width="100">
           <p class="fullname">Elizaveta Chernysh</p>
         </div>
       </header>
@@ -23,23 +23,23 @@
         <section class="contacts">
           <h3 class="title title-section">CONTACTS</h3>
           <p class="phone"></p>
-          <ul class="contacts-link">
-            <li>
+          <ul class="contact-links">
+            <li class="contact-link">
               <a href="https://t.me/Elizachernysh" class="telegram">
                 <img src="https://osx.telegram.org/updates/site/logo.png" width="60" />
               </a>
             </li>
-            <li>
+            <li class="contact-link">
               <a href="https://github.com/ElizaChernysh" class="github">
                 <img src="https://cdn.iconscout.com/icon/free/png-256/github-163-761603.png" width="60" />
               </a>
             </li>
-            <li>
+            <li class="contact-link">
               <a href="https://www.linkedin.com/in/eliza-chernysh-28a40a239/" class="linkedin">
                 <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="60">
               </a>
             </li>
-            <li>
+            <li class="contact-link">
               <a href="mailto:elizaveta.chernysh.v@gmail.com" class="gmail">
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0ICqrLgplZP86QhH5yE9DwLyuip1KLe-o8z39CAchzXVLfcAtmLbf6iIEkslvdOg6xKE&usqp=CAU"
@@ -149,11 +149,10 @@
         </section>
 
         <section class="education">
-          <h3 class="title title-education">
+          <h3 class="title title-education">EDUCATION</h3>
             <p class="educatio-description">
               Institution - Taras Shevchenko National University of Kyiv Qualification and Degree - Bachelor Degree in psychology
             </p>
-          </h3>
         </section>
 
         <section class="courses">
